# Runtime/Beam/Api/BeamPlayerClient/src/BeamPlayerClient/Model/UpdateUserRequest.cs
@@ -1,0 +1,88 @@
+/*
+ * Player API
+ *
+ * The Player API is a service to integrate your game with Beam
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using OpenAPIDateConverter = BeamPlayerClient.Client.OpenAPIDateConverter;
+
+namespace BeamPlayerClient.Model
+{
+    /// <summary>
+    /// UpdateUserRequest
+    /// </summary>
+    [DataContract(Name = "UpdateUserRequest")]
+    [UnityEngine.Scripting.Preserve]
+    public partial class UpdateUserRequest
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="UpdateUserRequest" /> class.
+        /// </summary>
+        [JsonConstructorAttribute]
+        [UnityEngine.Scripting.Preserve]
+        protected UpdateUserRequest() { }
+        /// <summary>
+        /// Initializes a new instance of the <see cref="UpdateUserRequest" /> class.
+        /// </summary>
+        /// <param name="newEntityId">newEntityId (required).</param>
+        [UnityEngine.Scripting.Preserve]
+        public UpdateUserRequest(string newEntityId = default(string))
+        {
+            // to ensure "newEntityId" is required (not null)
+            if (newEntityId == null)
+            {
+                throw new ArgumentNullException("newEntityId is a required property for UpdateUserRequest and cannot be null");
+            }
+            this.NewEntityId = newEntityId;
+        }
+
+        /// <summary>
+        /// Gets or Sets NewEntityId
+        /// </summary>
+        [DataMember(Name = "newEntityId", IsRequired = true, EmitDefaultValue = true)]
+        [UnityEngine.Scripting.Preserve]
+        public string NewEntityId { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        [UnityEngine.Scripting.Preserve]
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class UpdateUserRequest {\n");
+            sb.Append("  NewEntityId: ").Append(NewEntityId).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        [UnityEngine.Scripting.Preserve]
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+    }
+
+}
